Fixed Spacing of reviews

--- a/frontend/src/components/AllSpots/SpotDetails.css
+++ b/frontend/src/components/AllSpots/SpotDetails.css
@@ -124,3 +124,7 @@
   cursor: pointer;
   margin: 5px 0;
 }
+
+.review{
+  padding:10px 0px;
+}
